<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206171"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/titlePC"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:background="#031C27"
        android:fontFamily="sans-serif-medium"
        android:text="@string/categoryPC"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plusItem2PC"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="332dp"
        android:backgroundTint="#259E08"
        android:text="+"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantItem2PC"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem2PC" />

    <Button
        android:id="@+id/minunItem2PC"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="332dp"
        android:backgroundTint="#980000"
        android:text="-"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPriceItem1PC"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="104dp"
        android:background="#031C27"
        android:text="PREÇO: R$ 1500"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:background="#031C27"
        android:text="@string/quant"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem1PC" />

    <Button
        android:id="@+id/plusItem1PC"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="#259E08"
        android:text="+"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageItem3PC"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="#031C27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageItem2PC"
        app:srcCompat="@drawable/img_6" />

    <Button
        android:id="@+id/endPC"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="540dp"
        android:backgroundTint="#259E08"
        android:text="@string/concluir"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quitPC"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="540dp"
        android:backgroundTint="#980000"
        android:text="@string/quit"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageItem1Monitor"
        android:layout_width="153dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:background="#031C27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_4" />

    <Button
        android:id="@+id/minunItem1PC"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="#980000"
        android:text="-"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        android:background="#031C27"
        android:text="@string/quant"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem2PC" />

    <TextView
        android:id="@+id/textPriceItem3PC"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="100dp"
        android:background="#031C27"
        android:text="PREÇO: R$ 2300"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem2PC" />

    <EditText
        android:id="@+id/quantItem1PC"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem1PC" />

    <EditText
        android:id="@+id/quantItem3PC"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem3PC" />

    <Button
        android:id="@+id/plusItem3PC"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="468dp"
        android:backgroundTint="#259E08"
        android:text="+"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minunItem3PC"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="468dp"
        android:backgroundTint="#980000"
        android:text="-"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:background="#031C27"
        android:text="QUANT: "
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem3PC" />

    <TextView
        android:id="@+id/textPriceItem2PC"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="124dp"
        android:background="#031C27"
        android:text="PREÇO: R$ 4500"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem1PC" />

    <ImageView
        android:id="@+id/imageItem2PC"
        android:layout_width="153dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#031C27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageItem1Monitor"
        app:srcCompat="@drawable/img_5" />

</androidx.constraintlayout.widget.ConstraintLayout>