<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206171"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/endKeyboard"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="#259E08"
        android:text="@string/concluir"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quitKeyboard"
        android:layout_width="111dp"
        android:layout_height="41dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="#980000"
        android:text="@string/quit"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minunItem3Keyboard"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="448dp"
        android:backgroundTint="#980000"
        android:text="-"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageItem3Keyboard"
        android:layout_width="157dp"
        android:layout_height="119dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:background="#031C27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageItem2Keyboard"
        app:srcCompat="@drawable/img_9" />

    <Button
        android:id="@+id/plusItem1Keyboard"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="176dp"
        android:backgroundTint="#259E08"
        android:text="+"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPriceItem1Keyboard"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="92dp"
        android:background="#031C27"
        android:text="PREÇO: R$ 700"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="28dp"
        android:background="#031C27"
        android:text="@string/quant"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem2Keyboard" />

    <EditText
        android:id="@+id/quantItem2Keyboard"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem2Keyboard" />

    <Button
        android:id="@+id/plusItem3Keyboard"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="448dp"
        android:backgroundTint="#259E08"
        android:text="+"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPriceItem3Keyboard"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="120dp"
        android:background="#031C27"
        android:text="PREÇO: R$ 600"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem2Keyboard" />

    <ImageView
        android:id="@+id/imageItem1Keyboard"
        android:layout_width="153dp"
        android:layout_height="108dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:background="#031C27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="12dp"
        android:background="#031C27"
        android:text="@string/quant"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem1Keyboard" />

    <TextView
        android:id="@+id/textPriceItem2Keyboard"
        android:layout_width="143dp"
        android:layout_height="27dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="100dp"
        android:background="#031C27"
        android:text="PREÇO: R$ 450"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem1Keyboard" />

    <EditText
        android:id="@+id/quantItem3Monitor"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem3Keyboard" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="97dp"
        android:layout_height="26dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="36dp"
        android:background="#031C27"
        android:text="@string/quant"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem3Keyboard" />

    <EditText
        android:id="@+id/quantItem1Keyboard"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textPriceItem1Keyboard" />

    <Button
        android:id="@+id/minunItem1Keyboard"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="176dp"
        android:backgroundTint="#980000"
        android:text="-"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageItem2Keyboard"
        android:layout_width="153dp"
        android:layout_height="108dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="#031C27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageItem1Keyboard"
        app:srcCompat="@drawable/img_8" />

    <Button
        android:id="@+id/minunItem2Keyboard"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="#980000"
        android:text="-"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plusItem2Keyboard"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="#259E08"
        android:text="+"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleKeyboard"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:background="#031C27"
        android:fontFamily="sans-serif-medium"
        android:text="@string/categoryKeyboard"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>